After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784790 - comics: Don't throw errors in a loop if image is not readable
comics: Don't throw errors in a loop if image is not readable
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-11 11:42 UTC by Bastien Nocera
Modified: 2017-07-11 16:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
comics: Don't throw errors in a loop if image is not readable (1.26 KB, patch)
2017-07-11 11:42 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2017-07-11 11:42:22 UTC
.
Comment 1 Bastien Nocera 2017-07-11 11:42:26 UTC
Created attachment 355322 [details] [review]
comics: Don't throw errors in a loop if image is not readable

If the file inside the comics archive isn't a readable image file, then
the loader would get closed but we'd keep trying to feed it data,
leading to tons of warnings.

Exit early with the gdk-pixbuf loader error instead.
Comment 2 Carlos Garcia Campos 2017-07-11 15:43:37 UTC
Comment on attachment 355322 [details] [review]
comics: Don't throw errors in a loop if image is not readable

Thanks
Comment 3 Bastien Nocera 2017-07-11 16:55:15 UTC
Attachment 355322 [details] pushed as 3e438b9 - comics: Don't throw errors in a loop if image is not readable