comics: Don't throw errors in a loop if image is not readable

If the file inside the comics archive isn't a readable image file, then
the loader would get closed but we'd keep trying to feed it data,
leading to tons of warnings.

Exit early with the gdk-pixbuf loader error instead.

https://bugzilla.gnome.org/show_bug.cgi?id=784790